website/pages/v0.16.0/api/carbon/types/index.md
---
title: "@buape/carbon API · Types"
description: Auto-generated API documentation
sidebarTitle: "Types"
---

# @buape/carbon API · Types

## Types

| Name | Description |
|------|-------------|
| [`AllowedMentions`](allowedmentions) |  |
| [`AnyChannel`](anychannel) |  |
| [`APILabelComponent2`](apilabelcomponent2) |  |
| [`APIModalInteractionResponseCallbackComponent2`](apimodalinteractionresponsecallbackcomponent2) |  |
| [`APIModalInteractionResponseCallbackData2`](apimodalinteractionresponsecallbackdata2) |  |
| [`ArrayOrSingle`](arrayorsingle) |  |
| [`BaseMessageInteractiveComponentConstructor`](basemessageinteractivecomponentconstructor) |  |
| [`ChannelTypeMap`](channeltypemap) |  |
| [`CommandExecutionStatus`](commandexecutionstatus) | Final execution status for a command invocation, passed to middleware `after` hooks. |
| [`CommandMiddleware`](commandmiddleware) |  |
| [`CommandMiddlewareAfterContext`](commandmiddlewareaftercontext) | Context for middleware `after` hooks. |
| [`CommandMiddlewareBaseContext`](commandmiddlewarebasecontext) | Shared context provided to command middleware hooks. |
| [`CommandMiddlewareBeforeContext`](commandmiddlewarebeforecontext) | Context for middleware `before` hooks. |
| [`ComponentData`](componentdata) |  |
| [`ComponentParserResult`](componentparserresult) |  |
| [`ConditionalCommandOption`](conditionalcommandoption) | A function that takes a command interaction and returns a boolean value |
| [`ConditionalComponentOption`](conditionalcomponentoption) | A function that takes a component interaction and returns a boolean value |
| [`DMBasedChannel`](dmbasedchannel) |  |
| [`GuildBasedChannel`](guildbasedchannel) |  |
| [`IfPartial`](ifpartial) |  |
| [`ListenerEventAdditionalData`](listenereventadditionaldata) |  |
| [`ListenerEventData`](listenereventdata) |  |
| [`ListenerEventRawData`](listenereventrawdata) |  |
| [`ListenerEventType`](listenereventtype) |  |
| [`MessagePayload`](messagepayload) | The data that is sent to Discord when sending a message. |
| [`MessagePayloadFile`](messagepayloadfile) | The data for a file to send in an interaction |
| [`MessagePayloadObject`](messagepayloadobject) |  |
| [`PollSendPayload`](pollsendpayload) |  |
| [`ResolvedFile`](resolvedfile) |  |
| [`SendableChannel`](sendablechannel) |  |
| [`ThreadChannel`](threadchannel) |  |
| [`ThreadOnlyChannel`](threadonlychannel) |  |
| [`TopLevelComponents`](toplevelcomponents) |  |
| [`VoiceState`](voicestate) |  |

## Constants

| Name | Description |
|------|-------------|
| [`GatewayEvent`](gatewayevent) |  |
| [`ListenerEvent`](listenerevent) |  |
| [`WebhookEvent`](webhookevent) |  |
